helper widget token input

--- a/templates/main_tpl/css/main.css
+++ b/templates/main_tpl/css/main.css
@@ -41,3 +41,16 @@
 .ui-dialog-titlebar{
 	display: none;
 }
+.form-dialog{
+	font-size:14px;
+}
+.ui-widget{
+	font-size:14px;
+}
+
+.token-input-list-facebook{
+	width:245px !important;
+}
+.token-input-dropdown-facebook{
+	width:245px !important;
+}
